--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/style.css">  
 </head>
 
 <body>
@@ -77,7 +76,7 @@
             <div class="restaurants__all">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__cards">
-                    <a href="#" class="card">
+                    <a href="restaurants/Lapalettedugout.html" class="card">
                         <article>    
                             <div class="restaurants__img--first">
                                 <p class="new">Nouveau</p>
@@ -94,7 +93,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="#" class="card">
+                    <a href="restaurants/Lanoteenchantee.html" class="card">
                         <article>    
                             <div class="restaurants__img--second">
                                 <p class="new">Nouveau</p>
@@ -111,7 +110,7 @@
                             </div>  
                         </article>
                     </a>
-                    <a href="#" class="card">
+                    <a href="restaurants/Alafrancaise.html" class="card">
                         <article>    
                             <img class="restaurants__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card__content">
@@ -126,7 +125,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="#" class="card">
+                    <a href="restaurants/Ledelicedessens.html" class="card">
                         <article>    
                             <img class="restaurants__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card__content">
@@ -149,13 +148,15 @@
         <div class="footer__title">
             <h1>ohmyfood</h1>
         </div>
-         <div class="footer__links">
-            <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
-            <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
-        </div>
-        <div class="footer__links">
-            <a href="#" class="footer__link">Mentions légales</a>
-            <a href="#" class="footer__link">Contact</a>
+        <div class="links__all">
+            <div class="footer__links">
+                <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
+                <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+            </div>
+            <div class="footer__links">
+                <a class="footer__link" href="#">Mentions légales</a>
+                <a class="footer__link" href="#">Contact</a>
+            </div>
         </div>
     </footer>
 </body>
