--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -14,7 +14,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/restaurant.css">
+    <link rel="stylesheet" href="../css/headerRestaurant.css">
+</head>
+
+<body>
+    <header>
+        <a href class="return-arrow" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
+    </header>
+    <main>
+        <div class="header__img">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        </div>
+        <h1>La palette du goût</h1>
+        <div class="menu__heart">
+            <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+            <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
+        </div>
+        <section class="entrees">
+            <h2>Entrées</h2>
+        </section>
+        <section class="plats">
+            <h2>Plats</h2>
+        </section>
+        <section class="desserts">
+            <h2>Desserts</h2>
+        </section>
+        <div class="order">
+
+        </div>
+        <footer>
+
+        </footer>
+    </main>
+</body>
