--- a/restaurants/Alafrancaise.html
+++ b/restaurants/Alafrancaise.html
@@ -18,3 +18,4 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/style.css">
+</head>
