--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -22,32 +22,140 @@
 
 <body>
     <header>
-        <a href class="return-arrow" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a class="return-arrow" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img class="logo" src="../images/logo/ohmyfood.png" alt="logo ohmyfood">
     </header>
     <main>
-        <div class="header__img">
-            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        <div class="intro__img">
         </div>
-        <h1>La palette du goût</h1>
-        <div class="menu__heart">
-            <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
-            <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
-        </div>
-        <section class="entrees">
-            <h2>Entrées</h2>
+        <section class="carte">
+            <div class="intro">
+                <div class="intro__title">
+                    <h1>La palette du goût</h1>
+                </div>
+                <div class="menu__heart">
+                    <i class="fa-regular fa-heart fa-lg heart" aria-hidden="true"></i>
+                    <i class="fa-solid fa-heart fa-lg heart" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="menu__all">
+                    <div class="menu__title">
+                        <h2>ENTRÉES</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>25€</p>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>35€</p>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Oeuf au plat</h3>
+                            <p>Assaisonneé à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>20€</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__all">
+                    <div class="menu__title">
+                        <h2>PLATS</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>40€</p>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>A la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>35€</p>
+                        </div>  
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>44€</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__all">
+                    <div class="menu__title">
+                        <h2>DESSERTS</h2>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Paris-Brest</h3>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>18€</p>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>  
+                        <div class="menu__price">
+                            <p>22€</p>
+                        </div>
+                    </div>
+                    <div class="menu__step">
+                        <div class="menu__txt">
+                            <h3>Mousse au chocolat</h3>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>23€</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="order">
+                <a class="link__button" href="#">
+                    Commandez
+                </a>
+            </div>
         </section>
-        <section class="plats">
-            <h2>Plats</h2>
-        </section>
-        <section class="desserts">
-            <h2>Desserts</h2>
-        </section>
-        <div class="order">
-
-        </div>
         <footer>
-
+            <div class="footer__title">
+                <h1>ohmyfood</h1>
+            </div>
+            <div class="links__all">
+                <div class="footer__links">
+                    <a href="#" class="footer__link"><span class="footer__icon"><i class="fa-solid fa-utensils" aria-hidden="true"></i></span>Proposer un restaurant</a>
+                    <a href="#" class="footer__link"><span class="footer__icon--handshake"><i class="fa-solid fa-handshake-angle" aria-hidden="true"></i></span>Devenir partenaire</a>
+                </div>
+                <div class="footer__links">
+                    <a class="footer__link" href="#">Mentions légales</a>
+                    <a class="footer__link" href="#">Contact</a>
+                </div>
+            </div>
         </footer>
     </main>
 </body>
