Desktop carte done

--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -138,7 +138,7 @@
             </div>
             <div class="order">
                 <a class="link__button" href="#">
-                    Commandez
+                    Commander
                 </a>
             </div>
         </section>
