--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -51,6 +51,9 @@
                         <div class="menu__price">
                             <p>25€</p>
                         </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
@@ -60,6 +63,9 @@
                         <div class="menu__price">
                             <p>35€</p>
                         </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
@@ -68,6 +74,9 @@
                         </div>
                         <div class="menu__price">
                             <p>20€</p>
+                        </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
                         </div>
                     </div>
                 </div>
@@ -83,6 +92,9 @@
                         <div class="menu__price">
                             <p>40€</p>
                         </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
@@ -91,6 +103,9 @@
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
+                        </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
                         </div>  
                     </div>
                     <div class="menu__step">
@@ -100,6 +115,9 @@
                         </div>
                         <div class="menu__price">
                             <p>44€</p>
+                        </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
                         </div>
                     </div>
                 </div>
@@ -115,6 +133,9 @@
                         <div class="menu__price">
                             <p>18€</p>
                         </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
@@ -124,6 +145,9 @@
                         <div class="menu__price">
                             <p>22€</p>
                         </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
@@ -132,6 +156,9 @@
                         </div>
                         <div class="menu__price">
                             <p>23€</p>
+                        </div>
+                        <div class="validation">
+                            <i class="validation__check fa-solid fa-circle-check" aria-hidden="true"></i>
                         </div>
                     </div>
                 </div>
