loader in progress

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/style.css">  
+    <link rel="stylesheet" href="css/loader.css">
 </head>
 
 <body>
+    <div class="loader"></div>
     <header>
         <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
@@ -155,7 +157,7 @@
             </div>
             <div class="footer__links">
                 <a class="footer__link" href="#">Mentions légales</a>
-                <a class="footer__link" href="#">Contact</a>
+                <a class="footer__link" href="mailto:ohmyfood@.com">Contact</a>
             </div>
         </div>
     </footer>
