--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -180,7 +180,7 @@
                 </div>
                 <div class="footer__links">
                     <a class="footer__link" href="#">Mentions légales</a>
-                    <a class="footer__link" href="#">Contact</a>
+                    <a class="footer__link" href="mailto:NOMDUMAIL@MAIL.COM">Contact</a>
                 </div>
             </div>
         </footer>
