--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 </head>
 
 <body>
-    <div class="loader"></div>
+    <div class="loader-container">
+        <div class="loader"></div>
+        <div class="overlay"></div>
+    </div>
     <header>
         <div class="logo">
             <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
