truncate txt menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
         <div class="location">
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
-            <h4>Paris, Belleville</h4>
+            <!-- ADD LATER feature to choose a location <input type="text" placeholder="Paris, Belleville">-->
+             <h4>Paris, Belleville</h4>
         </div>
     </header> 
     <main>
