--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -45,8 +45,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3 class="truncate">Fricassée d'escargot</h3>
+                            <p class="truncate">Au piment d'Espelette</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -59,8 +59,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3 class="truncate">Foie gras de canard mi-cuit</h3>
+                            <p class="truncate">Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -73,8 +73,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonneé à la truffe sur lit de caviar</p>
+                            <h3 class="truncate">Oeuf au plat</h3>
+                            <p class="truncate">Assaisonneé à la truffe sur lit de caviar</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -92,8 +92,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3 class="truncate">Filet de boeuf aux herbes</h3>
+                            <p class="truncate">Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -106,8 +106,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>A la truffe noire sur sa purée de panais</p>
+                            <h3 class="truncate">Parmentier de queue de boeuf</h3>
+                            <p class="truncate">A la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -120,8 +120,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3 class="truncate">Filet de turbot</h3>
+                            <p class="truncate">Aux agrumes</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -139,8 +139,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3 class="truncate">Paris-Brest</h3>
+                            <p class="truncate">Revisité</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -153,8 +153,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3 class="truncate">Macaron au chocolat d'exception</h3>
+                            <p class="truncate">Et glace à la vanille de Madagascar</p>
                         </div>  
                         <div class="menu__animation--validation">
                             <div class="menu__price">
@@ -167,8 +167,8 @@
                     </div>
                     <div class="menu__step">
                         <div class="menu__txt">
-                            <h3>Mousse au chocolat</h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3 class="truncate">Mousse au chocolat</h3>
+                            <p class="truncate">Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="menu__animation--validation">
                             <div class="menu__price">
