Animation menu apparition

--- a/restaurants/Lapalettedugout.html
+++ b/restaurants/Lapalettedugout.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="menu">
-                <div class="menu__all">
+                <div class="menu__all menu__all--1">
                     <div class="menu__title">
                         <h2>ENTRÉES</h2>
                     </div>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu__all">
+                <div class="menu__all menu__all--2">
                     <div class="menu__title">
                         <h2>PLATS</h2>
                     </div>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu__all">
+                <div class="menu__all menu__all--3">
                     <div class="menu__title">
                         <h2>DESSERTS</h2>
                     </div>
